--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    background-image: url("https://github.com/thomasjedstrom/1942/blob/master/img/background.jpg?raw=true");
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background: gray;
 
-  canvas {
-    display: block;
-  }
-  
+}
+
+canvas {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 800px;
+  background-image: url("https://raw.githubusercontent.com/thomasjedstrom/1942/master/img/background.jpg");
+
+}
